<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    android:padding="8dp">

    <!-- No matches today -->
    <TextView
        android:id="@+id/widget_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/widget_no_data"
        android:visibility="gone"
        android:contentDescription="@string/widget_no_data"
        />

    <!-- Score information -->
    <LinearLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/widget_home_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="8dp"
            android:contentDescription="@string/home_name_description"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textStyle="bold"
                android:contentDescription="@string/score_description"/>

            <TextView
                android:id="@+id/widget_game_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:contentDescription="@string/game_time_description"/>
        </LinearLayout>

        <TextView
            android:id="@+id/widget_away_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="8dp"
            android:contentDescription="@string/away_name_description"/>

    </LinearLayout>

</FrameLayout>